Homepage layout created

--- a/index.html
+++ b/index.html
@@ -5,16 +5,49 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" type="text/css">
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" type="text/css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/hover.css/2.3.1/css/hover-min.css" type="text/css">
     <link rel="stylesheet" href="assets/css/style.css" type="text/css">
-    <title>Jessica Bennett</title>
+    <script src="https://kit.fontawesome.com/372df47477.js" crossorigin="anonymous"></script>
+    <title>Jessica Bennett | Full Stack Software Developer</title>
 </head>
 <body>
     <header>
-        Homepage-linked image
-        Nav section
-        Homepage text
+        <nav class="fixed-top">
+            <div class="row">
+                <div class="col col-md-2">
+                    <a href="index.html" id="circle-cover-bg"></a>
+                </div>
+                <div class="col col-md-4">
+                
+                </div>
+                <div class="col col-md-6">
+                    <i id="menu-sm" class="fas fa-bars d-block d-sm-none"></i>
+                    <ul id="menu-md" class="d-none d-md-block">
+                        <li>
+                            <a href="index.html">Home</a>
+                        </li>
+                        <li>
+                            <a href="#">About</a>
+                        </li>
+                        <li>
+                            <a href="#">Portfolio</a>
+                        </li>
+                        <li>
+                            <a href="#">Contact</a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </nav>
+        <div id="home">
+            <div>
+                <h1>Jessica Bennett</h1><br>
+                <h2>Full Stack Software Developer</h2>
+            </div>
+        </div>
+        <div class="scroll-hint">
+            <i class="fas fa-chevron-down"></i>
+        </div>
     </header>
     <section>
         About
