Portfolio layout completed

--- a/index.html
+++ b/index.html
@@ -11,76 +11,71 @@
     <title>Jessica Bennett | Full Stack Software Developer</title>
 </head>
 <body>
-     <section id="home-color">
-        <header>
-            <nav class="fixed-top">
-                <div class="row">
-                    <div class="col col-md-2">
-                        <a href="index.html" id="circle-cover-bg"></a>
-                    </div>
-                    <div class="col col-md-4">
-                    
-                    </div>
-                    <div class="col col-md-6">
-                        <i id="menu-sm" class="fas fa-bars d-block d-sm-none" data-toggle="modal" data-target="#menu-modal"></i>
-                        <ul id="menu-md" class="d-none d-md-block">
-                            <li>
-                                <a class="active" href="index.html">Home</a>
-                            </li>
-                            <li>
-                                <a href="#about-section">About</a>
-                            </li>
-                            <li>
-                                <a href="#">Portfolio</a>
-                            </li>
-                            <li>
-                                <a href="#">Contact</a>
-                            </li>
-                        </ul>
-                    </div>
+    <header id="home-color">
+        <nav class="fixed-top">
+            <div class="row">
+                <div class="col col-md-2">
+                    <a href="index.html" id="circle-cover-bg"></a>
                 </div>
-            </nav>
-            <div id="home-text">
-                <div>
-                    <h1>Jessica Bennett</h1><br>
-                    <h2>Full Stack Software Developer</h2>
+                <div class="col col-md-10">
+                    <i id="menu-xs" class="fas fa-bars d-block d-md-none" data-toggle="modal" data-target="#menu-modal"></i>
+                    <ul id="menu-md" class="d-none d-md-block">
+                        <li>
+                            <a class="active" href="index.html">Home</a>
+                        </li>
+                        <li>
+                            <a href="#about-section">About</a>
+                        </li>
+                        <li>
+                            <a href="#portfolio-section">Portfolio</a>
+                        </li>
+                        <li>
+                            <a href="#contact-section">Contact</a>
+                        </li>
+                    </ul>
                 </div>
             </div>
-            <div class="scroll-hint">
-                <a href="#about-section"><i class="fas fa-chevron-down"></i></a>
+        </nav>
+        <div id="home-text">
+            <div>
+                <h1>Jessica Bennett</h1><br>
+                <h2>Full Stack Software Developer</h2>
             </div>
-        </header>
-    </section>
-    <section id="about-color">
+        </div>
+        <div class="scroll-hint">
+            <a href="#about-section"><i class="fas fa-chevron-down"></i></a>
+        </div>
+    </header>
+    <section class="main-color">
         <div id="about-section">
             <!---------------------------------- Mobile animation --> 
-            <div class="d-block d-sm-none">
+            <div class="d-block d-md-none">
                 <div class="section-title">
                     <h2>About</h2>
                 </div>
-                <div class="about-text">
+                <div class="section-text">
                     <svg width="100%" height="100%" class="svg-about">
-                        <line id="line-a-sm" x1="50%" y1="0%" x2="50%" y2="5%"/>
-                        <circle id="circle-a-sm" cx="50%" cy="12%" r="8%"/>
+                        <line id="line-a-xs" x1="50%" y1="0%" x2="50%" y2="5%"/>
+                        <circle id="circle-a-xs" cx="50%" cy="12%" r="8%"/>
                         <text x="50%" y="12%" text-anchor="middle" fill="#E7E0DA" font-size="40px" font-family="FontAwesome" dy=".3em" 
                         data-toggle="modal" data-target="#undergrad-modal">&#xf19c;</text>
-                        <line id="line-b-sm" x1="50%" y1="19%" x2="50%" y2="24%"/>
-                        <circle id="circle-b-sm" cx="50%" cy="31%" r="8%"/>
+                        <line id="line-b-xs" x1="50%" y1="19%" x2="50%" y2="24%"/>
+                        <circle id="circle-b-xs" cx="50%" cy="31%" r="8%"/>
                         <text x="50%" y="31%" text-anchor="middle" fill="#E7E0DA" font-size="40px" font-family="FontAwesome" dy=".3em" 
                         data-toggle="modal" data-target="#teacher-modal">&#xf51c;</text>
-                        <line id="line-c-sm" x1="50%" y1="38%" x2="50%" y2="43%"/>
-                        <circle id="circle-c-sm" cx="50%" cy="50%" r="8%"/>
+                        <line id="line-c-xs" x1="50%" y1="38%" x2="50%" y2="43%"/>
+                        <circle id="circle-c-xs" cx="50%" cy="50%" r="8%"/>
                         <text x="50%" y="50%" text-anchor="middle" fill="#E7E0DA" font-size="40px" font-family="FontAwesome" dy=".3em" 
                         data-toggle="modal" data-target="#masters-modal">&#xf19d;</text>
-                        <line id="line-d-sm" x1="50%" y1="57%" x2="50%" y2="62%"/>
-                        <circle id="circle-d-sm" cx="50%" cy="69%" r="8%"/>
+                        <line id="line-d-xs" x1="50%" y1="57%" x2="50%" y2="62%"/>
+                        <circle id="circle-d-xs" cx="50%" cy="69%" r="8%"/>
                         <text x="50%" y="69%" text-anchor="middle" fill="#E7E0DA" font-size="40px" font-family="FontAwesome" dy=".3em" 
                         data-toggle="modal" data-target="#researcher-modal">&#xf1fe;</text>
-                        <line id="line-e-sm" x1="50%" y1="76%" x2="50%" y2="81%"/>
-                        <circle id="circle-e-sm" cx="50%" cy="88%" r="8%"/>
+                        <line id="line-e-xs" x1="50%" y1="76%" x2="50%" y2="81%"/>
+                        <circle id="circle-e-xs" cx="50%" cy="88%" r="8%"/>
                         <text x="50%" y="88%" text-anchor="middle" fill="#E7E0DA" font-size="40px" font-family="FontAwesome" dy=".3em" 
                         data-toggle="modal" data-target="#">&#xf5fc;</text>
-                        <line id="line-f-sm" x1="50%" y1="95%" x2="50%" y2="100%"/>
+                        <line id="line-f-xs" x1="50%" y1="95%" x2="50%" y2="100%"/>
                     </svg>
                 </div>
             </div>
@@ -89,37 +84,37 @@
                 <div class="section-title">
                     <h2>About</h2>
                 </div>
-                <div class="about-text">
+                <div class="section-text">
                     <svg width="100%" height="100%" class="svg-about">
-                        <line id="line-a-md" x1="0%" y1="14%" x2="5%" y2="14%"/>
-                        <circle id="circle-a-md" cx="10%" cy="14%" r="6%"/>
-                        <text x="10%" y="14%" text-anchor="middle" fill="#E7E0DA" font-size="40px" font-family="FontAwesome" dy=".3em" 
+                        <line id="line-a-md" x1="0%" y1="14%" x2="6%" y2="14%"/>
+                        <circle id="circle-a-md" cx="10%" cy="14%" r="5%"/>
+                        <text x="10%" y="14%" text-anchor="middle" fill="#E7E0DA" font-size="50px" font-family="FontAwesome" dy=".3em" 
                         data-toggle="modal" data-target="#undergrad-modal">&#xf19c;</text>
-                        <line id="line-b-md" x1="15%" y1="14%" x2="20%" y2="14%"/>
+                        <line id="line-b-md" x1="14%" y1="14%" x2="20%" y2="14%"/>
                         <line class="vertical" id="line-c-md" x1="20%" y1="14%" x2="20%" y2="32%"/>
-                        <line id="line-d-md" x1="20%" y1="32%" x2="25%" y2="32%"/>
-                        <circle id="circle-b-md" cx="30%" cy="32%" r="6%"/>
-                        <text x="30%" y="32%" text-anchor="middle" fill="#E7E0DA" font-size="40px" font-family="FontAwesome" dy=".3em" 
+                        <line id="line-d-md" x1="20%" y1="32%" x2="26%" y2="32%"/>
+                        <circle id="circle-b-md" cx="30%" cy="32%" r="5%"/>
+                        <text x="30%" y="32%" text-anchor="middle" fill="#E7E0DA" font-size="50px" font-family="FontAwesome" dy=".3em" 
                         data-toggle="modal" data-target="#teacher-modal">&#xf51c;</text>
-                        <line id="line-e-md" x1="35%" y1="32%" x2="40%" y2="32%"/>
-                        <line id="line-f-md" x1="40%" y1="32%" x2="40%" y2="50%"/>
-                        <line id="line-g-md" x1="40%" y1="50%" x2="45%" y2="50%"/>
-                        <circle id="circle-c-md" cx="50%" cy="50%" r="6%"/>
-                        <text x="50%" y="50%" text-anchor="middle" fill="#E7E0DA" font-size="40px" font-family="FontAwesome" dy=".3em" 
+                        <line id="line-e-md" x1="34%" y1="32%" x2="40%" y2="32%"/>
+                        <line class="vertical" id="line-f-md" x1="40%" y1="32%" x2="40%" y2="50%"/>
+                        <line id="line-g-md" x1="40%" y1="50%" x2="46%" y2="50%"/>
+                        <circle id="circle-c-md" cx="50%" cy="50%" r="5%"/>
+                        <text x="50%" y="50%" text-anchor="middle" fill="#E7E0DA" font-size="50px" font-family="FontAwesome" dy=".3em" 
                         data-toggle="modal" data-target="#masters-modal">&#xf19d;</text>
-                        <line id="line-h-md" x1="55%" y1="50%" x2="60%" y2="50%"/>
-                        <line id="line-i-md" x1="60%" y1="50%" x2="60%" y2="68%"/>
-                        <line id="line-j-md" x1="60%" y1="68%" x2="65%" y2="68%"/>
-                        <circle id="circle-d-md" cx="70%" cy="68%" r="6%"/>
-                        <text x="70%" y="68%" text-anchor="middle" fill="#E7E0DA" font-size="40px" font-family="FontAwesome" dy=".3em" 
+                        <line id="line-h-md" x1="54%" y1="50%" x2="60%" y2="50%"/>
+                        <line class="vertical" id="line-i-md" x1="60%" y1="50%" x2="60%" y2="68%"/>
+                        <line id="line-j-md" x1="60%" y1="68%" x2="66%" y2="68%"/>
+                        <circle id="circle-d-md" cx="70%" cy="68%" r="5%"/>
+                        <text x="70%" y="68%" text-anchor="middle" fill="#E7E0DA" font-size="50px" font-family="FontAwesome" dy=".3em" 
                         data-toggle="modal" data-target="#researcher-modal">&#xf1fe;</text>
-                        <line id="line-k-md" x1="75%" y1="68%" x2="80%" y2="68%"/>
-                        <line id="line-l-md" x1="80%" y1="68%" x2="80%" y2="86%"/>
-                        <line id="line-m-md" x1="80%" y1="86%" x2="85%" y2="86%"/>
-                        <circle id="circle-e-md" cx="90%" cy="86%" r="6%"/>
-                        <text x="90%" y="86%" text-anchor="middle" fill="#E7E0DA" font-size="40px" font-family="FontAwesome" dy=".3em" 
+                        <line id="line-k-md" x1="74%" y1="68%" x2="80%" y2="68%"/>
+                        <line class="vertical" id="line-l-md" x1="80%" y1="68%" x2="80%" y2="86%"/>
+                        <line id="line-m-md" x1="80%" y1="86%" x2="86%" y2="86%"/>
+                        <circle id="circle-e-md" cx="90%" cy="86%" r="5%"/>
+                        <text x="90%" y="86%" text-anchor="middle" fill="#E7E0DA" font-size="50px" font-family="FontAwesome" dy=".3em" 
                         data-toggle="modal" data-target="#">&#xf5fc;</text>
-                        <line id="line-n-md" x1="95%" y1="86%" x2="100%" y2="86%"/>
+                        <line id="line-n-md" x1="94%" y1="86%" x2="100%" y2="86%"/>
                     </svg>
                 </div>
             </div>
@@ -128,8 +123,40 @@
             </div>
         </div>
     </section>
-    <section>
-        Portfolio
+    <section class="main-color">
+        <div id="portfolio-section">
+            <div class="section-title">
+                <h2>Portfolio</h2>
+            </div>
+            <div class="section-text photos">
+                <div class="row justify-content-center">
+                    <div class="col-6 col-md-4 my-auto">
+                        <img src="assets/images/first-website.JPG" alt="jessica bennetts first website">
+                    </div>
+                    <div class="col-6 col-md-4 my-auto">
+                        <img src="assets/images/developer-website.JPG" alt="full stack software developer website">
+                    </div>
+                    <div class="col-6 col-md-4 my-auto">
+                        <img src="assets/images/developer-website.JPG" alt="full stack software developer website">
+                    </div>
+                </div>
+                <div class="row justify-content-center">
+                    <div class="col-6 col-md-4 my-auto">
+                        <img src="assets/images/first-website.JPG" alt="jessica bennetts first website">
+                    </div>
+                    <div class="col-6 col-md-4 my-auto">
+                        <img src="assets/images/developer-website.JPG" alt="full stack software developer website">
+                    </div>
+                    <div class="col-6 col-md-4 my-auto">
+                        <img src="assets/images/developer-website.JPG" alt="full stack software developer website">
+                    </div>
+                    
+                </div>      
+            </div>
+            <div class="scroll-hint">
+                <a href="#contact-section"><i class="fas fa-chevron-down"></i></a>
+            </div>
+        </div>
     </section>
     <section>
         Contact form
@@ -155,10 +182,10 @@
                             <a href="#about-section">About</a>
                         </li>
                         <li>
-                            <a href="#">Portfolio</a>
+                            <a href="#portfolio-section">Portfolio</a>
                         </li>
                         <li>
-                            <a href="#">Contact</a>
+                            <a href="#contact-section">Contact</a>
                         </li>
                         <li>
                             <a href="#">Download CV</a>
