Second about page layout completed

--- a/index.html
+++ b/index.html
@@ -48,11 +48,11 @@
     </header>
     <section class="main-color">
         <div id="about-section">
+            <div class="section-title">
+                <h2>About</h2>
+            </div>
             <!---------------------------------- Mobile animation --> 
             <div class="d-block d-md-none">
-                <div class="section-title">
-                    <h2>About</h2>
-                </div>
                 <div class="section-text">
                     <svg width="100%" height="100%" class="svg-about">
                         <line id="line-a-xs" x1="50%" y1="0%" x2="50%" y2="5%"/>
@@ -73,17 +73,17 @@
                         data-toggle="modal" data-target="#researcher-modal">&#xf1fe;</text>
                         <line id="line-e-xs" x1="50%" y1="76%" x2="50%" y2="81%"/>
                         <circle id="circle-e-xs" cx="50%" cy="88%" r="8%"/>
-                        <text x="50%" y="88%" text-anchor="middle" fill="#E7E0DA" font-size="40px" font-family="FontAwesome" dy=".3em" 
-                        data-toggle="modal" data-target="#">&#xf5fc;</text>
+                        <a href="#about2-section"><text x="50%" y="88%" text-anchor="middle" fill="#E7E0DA" font-size="40px" font-family="FontAwesome" dy=".3em">&#xf5fc;
+                        </text></a>
                         <line id="line-f-xs" x1="50%" y1="95%" x2="50%" y2="100%"/>
                     </svg>
                 </div>
             </div>
             <!---------------------------------- Desktop animation -->
             <div class="d-none d-md-block">
-                <div class="section-title">
+                <!-- <div class="section-title">
                     <h2>About</h2>
-                </div>
+                </div> -->
                 <div class="section-text">
                     <svg width="100%" height="100%" class="svg-about">
                         <line id="line-a-md" x1="0%" y1="14%" x2="6%" y2="14%"/>
@@ -112,12 +112,56 @@
                         <line class="vertical" id="line-l-md" x1="80%" y1="68%" x2="80%" y2="86%"/>
                         <line id="line-m-md" x1="80%" y1="86%" x2="86%" y2="86%"/>
                         <circle id="circle-e-md" cx="90%" cy="86%" r="5%"/>
-                        <text x="90%" y="86%" text-anchor="middle" fill="#E7E0DA" font-size="50px" font-family="FontAwesome" dy=".3em" 
-                        data-toggle="modal" data-target="#">&#xf5fc;</text>
+                        <a href="#about2-section"><text x="90%" y="86%" text-anchor="middle" fill="#E7E0DA" font-size="50px" font-family="FontAwesome" dy=".3em">&#xf5fc;
+                        </text></a>
                         <line id="line-n-md" x1="94%" y1="86%" x2="100%" y2="86%"/>
                     </svg>
                 </div>
             </div>
+        </div>
+    </section>
+    <section class="main-color">
+        <div id="about2-section">
+            <div class="section-title">
+                <div>
+                <h3>Full Stack Software Development Student</h3>
+                <h4>Present-2021</h4>
+                </div>
+            </div>
+            <div class="section-text">
+                <img src="assets/images/current-sq.jpg" alt="jessica bennett currently">
+                <div class="row">
+                    <div class="col-12 col-md-6">
+                        <blockquote cite="https://www.forbes.com/2006/12/10/john-romero-games-tech_cx_de_games06_1212romero.html#57277066866e">
+                        You might not think that programmers are artists, but programming is an extremely creative profession. It's logic-based creativity. ~ John Romero</blockquote>
+                        <p>Having recently found this quote, it's been a relief to learn that perhaps I haven't 'failed' every personality test I've ever taken; where logic and 
+                        creativity appear to be either/or options. Instead, it's just taken me a while to get on the right path for my inherent skillset.
+                        Or rather, I've always been on the right path, but now I've got to the really exciting bit.
+                        There are so many aspects of all the work I've undertaken in my life that I have loved. But the most frustrating part has been my desire to do the 
+                        coding myself (creating dashboards in Qlikview, automated VBA in Excel, website amendments...) combined with my slight (self-taught) ineptitude.
+                        This is what has driven me to enrol as a student once more, with Code Institute.
+                        My journey from qualified teacher, to Psychology of Education student, then researcher, data analyst and now Full Stack Software Development student 
+                        has been difficult at times , often confusing and has led to the odd existential crisis(!). But it's all starting to come together...
+                        Which leaves me: a soon-to-be qualified Full Stack Software Developer, with valuable skills from each point of my journey, and someone who is as creative 
+                        as they are logical. Not one or the other...</p>
+                    </div>
+                    <div class="col-12 col-md-6">
+                        <h4>Skills</h4>
+                        <div class="progress">
+                            <div class="progress-bar color-a" role="progressbar" aria-valuenow="90" aria-valumin="0" aria-valuemax="100" style="width:90%;">
+                            <span class="sr-only">90% complete</span>
+                            </div>
+                            <span class="progress-type color-a">HTML / HTML5</span>
+                        </div>
+                        <div class="progress">
+                            <div class="progress-bar color-b" role="progressbar" aria-valuenow="80" aria-valumin="0" aria-valuemax="100" style="width:80%;">
+                            <span class="sr-only">80% complete</span>
+                            </div>
+                            <span class="progress-type color-b">CSS / CSS3</span>
+                        </div>
+                    </div>
+                </div>
+            </div>   
             <div class="scroll-hint">
                 <a href="#portfolio-section"><i class="fas fa-chevron-down"></i></a>
             </div>
